# ygz-slam

./: .CMakeLists.txt.kate-swp  .gitignore  CMakeLists.txt  Readme.md  log.txt  note.md
config/: default.yaml
include/ygz/: Algorithm.h  Basic.h  CeresTypes.h  G2oTypes.h  camera.h  ceres_types.h  common_include.h  config.h  feature_detector.h  frame.h  g2o_types.h  initializer.h  local_mapping.h  loop_closing.h  map_point.h  memory.h  optimizer.h  system.h  tracker.h  utils.h  viewer.h  visual_odometry.h
include/ygz/Algorithm/: .Initializer.h.kate-swp  BA.h  CVUtils.h  FeatureDetector.h  Initializer.h  Matcher.h  NLSSolver.h  NLSSolver_impl.hpp  RobustCost.h  SparseImageAlign.h  Tracker.h
include/ygz/Basic/: .Common.h.kate-swp  Camera.h  Common.h  Config.h  Feature.h  Frame.h  MapPoint.h  Memory.h
include/ygz/Ceres/: CeresAlignmentError.h  CeresReprojSparseDirectError.h  CeresReprojectionError.h  CeresReprojectionErrorPointOnly.h  CeresReprojectionErrorPoseOnly.h
include/ygz/Module/: LocalMapping.h  VisualOdometry.h
include/ygz/ORB/: ORBExtractor.h  ORBMatcher.h  ORBVocabulary.h  ORBextractor.h
include/ygz/System/: System.h
src/: CMakeLists.txt  config.cpp  feature_detector.cpp  frame.cpp  initializer.cpp  local_mapping.cpp  map_point.cpp  memory.cpp  optimizer.cpp  system.cpp  tracker.cpp  utils.cpp  viewer.cpp  visual_odometry.cpp
src/Algorithm/: BA.cpp  CVUtils.cpp  FeatureDetector.cpp  Initializer.cpp  Matcher.cpp  SparseImageAlign.cpp  Tracker.cpp
src/Basic/: Config.cpp  Frame.cpp  MapPoint.cpp  Memory.cpp
src/Module/: LocalMapping.cpp  VisualOdometry.cpp
src/ORB/: ORBExtractor.cpp  ORBMatcher.cpp  ORBextractor.cpp
test/: CMakeLists.txt  test_LK_tracking.cpp  test_feature_alignment.cpp  test_feature_extraction.cpp  test_feature_projection.cpp  test_g2o_types.cpp  test_initializer.cpp  test_local_ba.cpp  test_match_for_triangulation.cpp  test_memory.cpp  test_orb_match.cpp  test_orb_vocab_match.cpp  test_tum_tracking.cpp  test_tum_vo.cpp  test_vo_init.cpp  test_vo_track.cpp
